Fix: Widget Editing handle is misaligned when Container is the first one in the page [ED-4953]

--- a/assets/dev/scss/editor/preview/preview.scss
+++ b/assets/dev/scss/editor/preview/preview.scss
@@ -434,7 +434,7 @@ html.elementor-html {
 .e-handles-inside,
 .elementor-section--handles-inside {
 
-	.elementor-element-overlay > .elementor-editor-element-settings {
+	> .elementor-element-overlay > .elementor-editor-element-settings {
 		transform: translateX(-50%);
 		border-radius: 0 0 5px 5px;
 	}
